Groups feed modifications (also updates native profile feed):  - simplified style by inheriting from plugin and removing theme specific activity files  - separated css into its own files (timeline/timeline.scss)  - Fixed reply and edit functionality  - styled consistent with nhs colour palette  - Comment, reply and edit form tidied significantly  - Activity buttons simplified and left aligned (reply / edit / delete / like)  - Fixed issue where replies and new comments didnt show or trigger reload  - Fixed image display issues on feed and new comments  - corrected group avatar and personal avatars on replies.
Groups generic (all group pages)  fixes:
 - added group description display to all group pages
 - added member count and moderator / owner display

--- a/assets/scss/buddy-comments.scss
+++ b/assets/scss/buddy-comments.scss
@@ -1,13 +1,15 @@
-#comments, #activity-stream {
+#comments {
   @extend #respond;
   @extend .nhsuk-list-panel;
   margin-top : nhsuk-spacing(3);
 
   ul.comment-list {
+	@extend .nhsuk-list-panel__list;
 	background-color : inherit;
 	list-style       : none;
 
-	li {
+	li:not(.load-more) {
+	  @extend .nhsuk-list-panel__item;
 	  border-bottom: 2px solid $color_nhsuk-grey-4;
 	  .div-comment, .comment-body {
 		clear            : both;
@@ -43,13 +45,23 @@
 		display: table;
 	  }
 	}
+	li.load-more {
+	  a.button {
+		@extend .nhsuk-button;
+		@extend .nhsuk-button--reverse;
+	  }
+	}
 
 	.comment-body {
 	  position   : relative;
 	  background : $color_nhsuk-white;
 
-	  .comment_body_comment:empty {
-		display : none;
+	  .comment_body_comment {
+		&:empty {
+		  display : none;
+		}
+
+
 	  }
 
 	  .item-avatar {
@@ -57,28 +69,7 @@
 		height : nhsuk-spacing(3);
 	  }
 
-	  .activity-state {
-		position : absolute;
-		bottom   : -#{nhsuk-spacing(5)};
-		right    : 0;
 
-		.activity-state-comments {
-		  @extend .nhsuk-tag;
-		  @extend .nhsuk-tag--white;
-		}
-
-		.activity-state-likes {
-		  @extend .nhsuk-tag;
-		  @extend .nhsuk-tag--grey;
-		}
-	  }
-
-	  :not(.has-likes) {
-		.ac-state-separator,
-		.activity-state-likes {
-		  display : none;
-		}
-	  }
 	}
 
 	.comment-author {
@@ -92,22 +83,7 @@
 		}
 	  }
 	}
-	.activity-meta {
-	  &:before {
-		clear: both;
-		content: "";
-		display: table;
-	  }
-	}
-  }
-}
-#activity-stream {
-  ul.comment-list {
-	li {
-	  &:first-of-type {
-		display: block;
-	  }
-	}
+
   }
 }
 
@@ -121,7 +97,7 @@ a.bbp-author-link {
 
 @include mq($until : tablet) {
   #item-body {
-	#comments, #activity-stream {
+	#comments {
 	  margin-left  : 0;
 	  margin-right : 0;
 	  max-width: 90vw;
